--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,27 +2,9 @@
     "name": "openspot-node",
     "image": "ghcr.io/sdustio/openspot_node:dev",
     "runArgs": [
+        "--privileged",
         "--cap-add=SYS_PTRACE",
         "--security-opt",
         "seccomp=unconfined"
-    ],
-    // Configure tool-specific properties.
-    "customizations": {
-        // Configure properties specific to VS Code.
-        "vscode": {
-            // Add the IDs of extensions you want installed when the container is created.
-            "extensions": [
-                "Gruntfuggly.todo-tree",
-                "ms-vscode.cpptools-extension-pack"
-            ],
-            "settings": {}
-        }
-    },
-    "overrideCommand": false,
-    // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    // "forwardPorts": [],
-    // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "gcc -v",
-    // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "vscode"
+    ]
 }
