--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -15,7 +15,14 @@ jobs:
           set -e
           IMAGE_NAME="openspot_node:dev"
           IMAGE_REPOSITORY="$(echo "ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME}" | tr '[:upper:]' '[:lower:]')"
-          docker build -t "${IMAGE_REPOSITORY}" -f devel.Dockerfile .
+
+          # [Optional] Enable buildkit, set output to plain text for logging
+          export DOCKER_BUILDKIT=1
+          export BUILDKIT_PROGRESS=plain
+          # Do the build - update
+          npm install -g "@vscode/dev-container-cli"
+          devcontainer build --no-cache --image-name "${IMAGE_REPOSITORY}" .
+
           # Push image to GitHub Container Registry
           echo "${{ github.token }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
           docker push "${IMAGE_REPOSITORY}"
