--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,19 @@
         "--cap-add=SYS_PTRACE",
         "--security-opt",
         "seccomp=unconfined"
-    ]
+    ],
+    // Configure tool-specific properties.
+    "customizations": {
+        // Configure properties specific to VS Code.
+        "vscode": {
+            // Add the IDs of extensions you want installed when the container is created.
+            "extensions": [
+                "Gruntfuggly.todo-tree",
+                "ms-vscode.cpptools-extension-pack"
+            ],
+            "settings": {}
+        }
+    },
+    "overrideCommand": false,
+    "remoteUser": "vscode"
 }
